<resources>
    <string name="app_name">Asset Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_assets">Assets</string>
    <string name="menu_employees">Employees</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="language_settings">Language Settings</string>
    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="serbian">Serbian</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_icon">Edit Icon</string>
    <string name="delete_icon">Delete Icon</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="add_employee">Add employee</string>
    <string name="add_icon">Add icon</string>
    <string name="add">Add</string>
    <string name="search_by_name_surname_or_email">Search by Name, Surname or Email</string>
    <string name="menu_locations">Locations</string>
    <string name="add_new_location">Add New Location</string>
    <string name="unknown_location">Unknown Location</string>
    <string name="latitude">"Latitude: "</string>
    <string name="longitude">"Longitude: "</string>
    <string name="error_retrieving_location">Error retrieving location</string>
    <string name="location_name">Location Name</string>
    <string name="select_location_on_the_map">Select location on the map</string>
    <string name="no_location_selected">No location selected!</string>
    <string name="confirm_deletion">Confirm Deletion</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="search_by_name">Search by name</string>
    <string name="latitude_longitude">(Latitude, Longitude)</string>
    <string name="add_asset">Add asset</string>
    <string name="prompt_assigned_employee">Assigned Employee</string>
    <string name="prompt_assigned_location">Assigned Location</string>
    <string name="menu_inventory">Inventory</string>
    <string name="add_inventory">Add inventory</string>
    <string name="add_inventory_item">Add Inventory Item</string>
    <string name="asset_name">Asset Name</string>
    <string name="select_a_new_location">Select a new location:  </string>
    <string name="select_a_new_employee">Select a new employee:  </string>
    <string name="current_location">Current location:</string>
    <string name="currently_assigned_employee">Currently assigned employee:  </string>
    <string name="enter_barcode">Enter Barcode</string>
    <string name="item_saved">Item saved!</string>
    <string name="edit_asset">Edit Asset</string>
    <string name="select_image">Select Image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="permission_denied">Permission denied</string>
    <string name="please_fill_all_fields">Please fill all fields</string>
    <string name="failed_to_load_image">Failed to load image</string>
    <string name="no_image_available">No image available</string>
    <string name="image_not_found">Image not found</string>
    <string name="assets_in">"Assets in "</string>
    <string name="close">Close</string>
    <string name="error_loading_data">Error loading data</string>
    <string name="city">City</string>
    <string name="asset_added_successfully">Asset added successfully!</string>
    <string name="failed_to_add_asset">Failed to add asset.</string>
    <string name="asset_deleted_successfully">Asset deleted successfully!</string>
    <string name="asset_to_delete_employee">Asset to delete employee.</string>
    <string name="asset_updated_successfully">Asset updated successfully!</string>
    <string name="failed_to_update_asset">Failed to update asset.</string>
    <string name="employee_added_successfully">Employee added successfully!</string>
    <string name="failed_to_add_employee">Failed to add employee.</string>
    <string name="employee_deleted_successfully">Employee deleted successfully!</string>
    <string name="failed_to_delete_employee">Failed to delete employee.</string>
    <string name="employee_updated_successfully">Employee updated successfully!</string>
    <string name="failed_to_update_employee">Failed to update employee.</string>
    <string name="are_you_sure_you_want_to_delete_this_employee">Are you sure you want to delete this employee?</string>
    <string name="inventory_item_deleted_successfully">Inventory item deleted successfully!</string>
    <string name="failed_to_delete_inventory_item">Failed to delete inventory item.</string>
    <string name="inventory_item_saved">Inventory item saved!</string>
    <string name="failed_to_save_inventory_item">Failed to save inventory item!</string>
    <string name="edit_inventory">Edit Inventory Item</string>
    <string name="barcode_cannot_be_empty">Barcode cannot be empty!</string>
    <string name="no_changes_detected">No changes detected.</string>
    <string name="search_by_barcode_employee_name_or_location">Search by barcode, employee or location</string>
    <string name="are_you_sure_you_want_to_delete_this_inventory_item">Are you sure you want to delete this inventory item?</string>
    <string name="search_by_name_or_barcode">Search by name or barcode</string>
    <string name="are_you_sure_you_want_to_delete_this_asset">Are you sure you want to delete this asset?</string>
    <string name="location_saved">Location saved!</string>
    <string name="failed_to_save_location">Failed to save location!</string>
    <string name="location_deleted_successfully">Location deleted successfully!</string>
    <string name="failed_to_delete_location">Failed to delete location.</string>
    <string name="location_updated_successfully">Location updated successfully!</string>
    <string name="failed_to_update_location">Failed to update location.</string>
    <string name="are_you_sure_you_want_to_delete_this_location">Are you sure you want to delete this location?</string>
    <string name="asset_details">Asset Details</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="currently_assigned_to">Currently Assigned To:</string>
    <string name="location">Location:</string>
    <string name="city_name">City Name</string>
    <string name="barcode">Barcode</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="asset_image">Asset Image</string>
    <string name="upload_image">Upload Image</string>
    <string name="save_asset">Save Asset</string>
    <string name="search">Search</string>
    <string name="select_employee">Select employee:</string>
    <string name="select_location">Select location:</string>
    <string name="km">KM</string>
</resources>