<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_assets">

    <fragment
        android:id="@+id/nav_assets"
        android:name="com.example.assetmanager.ui.assets.AssetsFragment"
        android:label="@string/menu_assets"
        tools:layout="@layout/fragment_assets">

         <action
        android:id="@+id/action_assetsFragment_to_addAssetFragment"
        app:destination="@id/addAssetFragment" />

        <action
            android:id="@+id/action_currentFragment_to_assetDetailFragment"
            app:destination="@id/assetDetailFragment" />
    </fragment>

   <fragment
        android:id="@+id/nav_employees"
        android:name="com.example.assetmanager.ui.employees.EmployeesFragment"
        android:label="@string/menu_employees"
        tools:layout="@layout/fragment_employees" />
    <fragment
        android:id="@+id/nav_locations"
        android:name="com.example.assetmanager.ui.locations.LocationsFragment"
        android:label="@string/menu_locations"
        tools:layout="@layout/fragment_locations" />

    <fragment
        android:id="@+id/addAssetFragment"
        android:name="com.example.assetmanager.ui.assets.AddAssetFragment"
        android:label="@string/add_asset"
        tools:layout="@layout/fragment_add_asset" />

    <fragment
        android:id="@+id/assetDetailFragment"
        android:name="com.example.assetmanager.ui.assets.AssetDetailFragment"
        android:label="@string/asset_details"
        tools:layout="@layout/fragment_asset_detail" >
        <argument
            android:name="asset"
            app:argType="com.example.assetmanager.data.model.Asset" />
    </fragment>

    <fragment
        android:id="@+id/nav_inventory"
        android:name="com.example.assetmanager.ui.inventory.InventoryFragment"
        android:label="@string/menu_inventory"
        tools:layout="@layout/fragment_inventory">

        <action
            android:id="@+id/action_inventoryFragment_to_addInventoryItemFragment"
            app:destination="@id/addInventoryItemFragment" />
    </fragment>

    <fragment
        android:id="@+id/addInventoryItemFragment"
        android:name="com.example.assetmanager.ui.inventory.AddInventoryItemFragment"
        android:label="@string/add_inventory_item"
        tools:layout="@layout/fragment_add_inventory_item" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.assetmanager.ui.settings.SettingsFragment"
        android:label="@string/language_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>