<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textAssetName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/asset_name"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/editBarcode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/enter_barcode"
                android:inputType="number" />

            <Button
                android:id="@+id/btnSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search" />

        </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/textScanBarcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_barcode"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageScanBarcode"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_barcode_read"
            android:padding="8dp" />
    </LinearLayout>

        <TextView
            android:id="@+id/textCurrentEmployee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/currently_assigned_employee"
            android:textSize="14sp"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/textCurrentLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_location"
            android:textSize="14sp"
            android:layout_marginTop="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_a_new_employee"
            android:layout_marginTop="16dp" />

        <Spinner
            android:id="@+id/spinnerNewEmployee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_a_new_location"
            android:layout_marginTop="16dp" />

        <Spinner
            android:id="@+id/spinnerNewLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />
    </LinearLayout>
</ScrollView>