<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.locations.LocationsFragment">

    <fragment
        android:id="@+id/mapFragment"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/bottomSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:background="@drawable/rounded_top_background"
        android:orientation="vertical"
        android:padding="16dp"
        app:behavior_peekHeight="100dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginBottom="8dp">

            <ImageView
                android:id="@+id/iv_arrow_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_arrow_up_float"
                app:tint="@color/secondary_500" />

            <TextView
                android:id="@+id/tvSelectLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_location_on_the_map"
                android:textSize="14sp"
                android:gravity="center" />
        </LinearLayout>

        <EditText
            android:id="@+id/editTextLocationName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/location_name"
            android:textSize="18sp"
            android:paddingTop="16dp"
            android:inputType="text" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:background="@drawable/rounded_background_info">

            <TextView
                android:id="@+id/textViewLatitude"
                android:layout_width="wrap_content"
                android:text="@string/latitude"
                android:layout_weight="1"
                android:layout_height="0dp"/>

            <TextView
                android:id="@+id/textViewLongitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longitude" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/btnSaveLocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_weight="1"
                android:elevation="2dp" />

            <Button
                android:id="@+id/btnUpdateLocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:layout_weight="1"
                android:elevation="2dp"
                android:visibility="gone"

            />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/cancel"
                android:layout_weight="1"
                android:elevation="2dp" />

        </LinearLayout>

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:theme="@style/SearchViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:queryHint="Search Locations"
            android:iconifiedByDefault="false"
            android:background="@drawable/rounded_background_search"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewLocations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_background_list" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
